Changes in version 0.12.1

BUG FIXES

    o Properly import gdata::drop.levels() and vegan::rarefy().

Changes in version 0.12.0

NEW FEATURES

    o   Added the loadBED12 function to load CAGEscan fragment data,
        especially from multiple libraries processed separately.
    o   Added the erccSpikeConcentration function to retreive concentration
        of RNA spikes sold by Thermo Fisher.
    o   Added the plate96 function to generate coordinate ranges in 96-well
        plate format.
    o   Added a "group" option for the function fldgmConcentrationPlot.
    o   New "hanabi" objects to ease the production of hanabi plots.

BUG FIXES

    o   countSymbols now handles cases where zero symbols are detected
        in a sample.

OTHER CHANGES

    o   After adding a "unmapped" category, the "qc" type in plotAnnot()
        now totals to 100 %.
    o   TPM() now warns if it will produce NaN values.
    o   In the template, merged `LIBRARY` and `RUN_ID`, used for same purpose.
    o   edgeR is only "Suggested": plotSlimSmear aborts if absent.
    o   Sort the groups in alphanumerical order in mapStats.
    o   Rarefactions results are saved on the disk, since they take time to run.
    o   Added a margin option to TPM-normalise on rows.

Changes in version 0.11.2

BUG FIXES

    o   hanabiPlot correction: was using data from general environment
        instead of its own parameter.
    o   Template correction: was using incorrect scale for rarefying raw
        counts.

Changes in version 0.11.1

BUG FIXES

    o   Import the whole ggplot2 in NAMESPACE, to correct a missing import
        and prevent further bugs.

Changes in version 0.11.0

NEW FEATURES

    o   Added the fldgmChamberWell function to convert between chamber
        and plate coordinate systems.

Changes in version 0.10.3

BUG FIXES

    o   Correct a PDF crash in plotAnnot().
    o   Correct documentation in mapStats() and plotAnnot().

Changes in version 0.10.2

BUG FIXES
